<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_list">ToDo List</string>
    <string name="loading_notes">Loading Notes ...</string>
    <string name="todo">TODO</string>
    <string name="search_menu">Search Menu</string>
    <string name="search_by_user_id">Search By User ID</string>
    <string name="search_by_task_id">Search By Task ID</string>
    <string name="search_by_title">Search By Title</string>
    <string name="type_here">Type Here:</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="user_id">User ID:</string>
    <string name="task_id">Task ID:</string>
    <string name="title">Title:</string>
    <string name="to_do_list">To Do List</string>
    <string name="to_do">TODO</string>
</resources>